# AI_HW1

./: 236501_hw1.ipynb  Algorithms.py  GreedyTests.py  pyproject.toml
